unpackaged/objects/EmployeeCertification__c.object
<CustomObject>
    <fields>
        <fullName>CertificationDate__c</fullName>
        <label>Certification Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Employee&apos;s Certifications</relationshipLabel>
        <relationshipName>Employee_s_Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee&apos;s Certifications</relationshipLabel>
        <relationshipName>EmployeeCertifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastMaintenanceDate__c</fullName>
        <formula>LastMaintenanceExam__r.ExamDate__c</formula>
        <label>Last Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMaintenanceExam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Maintenance Exam</label>
        <referenceTo>MaintenanceExam__c</referenceTo>
        <relationshipLabel>Employee&apos;s Certifications</relationshipLabel>
        <relationshipName>EmployeesCertifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastMaintenanceRelease__c</fullName>
        <formula>LastMaintenanceExam__r.ReleaseToUpdate__r.Name</formula>
        <label>Last Maintenance Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberPendingMaintenance__c</fullName>
        <description>Count the number of Exam maintenance related to the certification for this employee.</description>
        <label>Number of pending maintenance</label>
        <summaryFilterItems>
            <field>MaintenanceExam__c.Passed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>MaintenanceExam__c.EmployeesCertification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrimaryRelease__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification Release</label>
        <referenceTo>SalesforceRelease__c</referenceTo>
        <relationshipLabel>Employee&apos;s Certifications (Release)</relationshipLabel>
        <relationshipName>EmployeesCertifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Employee&apos;s Certification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>Certification__c</columns>
        <columns>CertificationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EmpCer-{00000000}</displayFormat>
        <label>Employee&apos;s Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee&apos;s Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>